calculateDailyReport refactoring